comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus odit praesentium, dolores quisquam aut adipisci nisi modi quidem perspiciatis dolore nihil et ipsum! Non officia autem, expedita ab quae architecto.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias doloremque tempora aliquam aut distinctio deserunt saepe inventore neque atque? Totam quas ab ducimus similique nesciunt exercitationem consequatur est atque ipsam?</p>
         </article>
     </main>
 </body>
